Remove overflow on body, make right-panel width 300px, fix dashboard styling

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 }
 html {
   height: 100%;
+  overflow-x: hidden;
 }
 body {
   background-color: rgb(15, 15, 15);
@@ -23,6 +24,7 @@ body {
   margin-top: 10px;
   font-family: Arial, Helvetica, sans-serif;
   min-height: 100%;
+  overflow-x: hidden;
 }
 .nav:before, .nav:after {
   display: table;
@@ -62,22 +64,9 @@ body {
 
 .btn-buy-sell-wrapper {
   display: inline-block;
-  width: 400px;
-  height: 48px;
+  padding: 5px 10px 5px 0px;
   vertical-align: middle;
-}
-
-@media (min-width: 1200px) {
-  .btn-buy-sell-wrapper {
-    float: right;
-  }
-}
-
-
-@media (max-width: 1152px) {
-  .btn-buy-sell-wrapper {
-     margin-top: 30px;
-  }
+  float: right;
 }
 
 .component-item {
@@ -229,7 +218,7 @@ body {
 .btn {
   padding: 12px 12px;
   margin-bottom: 0;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: normal;
   line-height: 1.42857143;
   text-align: center;
@@ -286,7 +275,7 @@ body {
 .btn-sell {
   margin-top: 3px;
   display: inline-block;
-  width: 180px;
+  width: 160px;
   border-radius: 3px;
 }
 
@@ -554,7 +543,7 @@ label.checkbox-label input[type=checkbox]{
 -------------------------------------------------------------- */
 #snapshot {
   z-index: 1;
-  height: 81px;
+  /*height: 81px;*/
 }
 .value-label {
   font-size: 20px;
@@ -571,7 +560,7 @@ label.checkbox-label input[type=checkbox]{
   overflow: hidden;
   /*margin-right: 45px;*/
   margin-left: 15px;
-  width: calc(100% - 370px);
+  width: calc(100% - 330px);
   -webkit-transition: all 400ms ease-out;
   -moz-transition: all 400ms ease-out;
   -o-transition: all 400ms ease-out;
@@ -582,10 +571,10 @@ label.checkbox-label input[type=checkbox]{
   width: calc(100% - 60px);
 }
 */
-#right-panel.collapsed { margin-right: -340px; }
+#right-panel.collapsed { margin-right: -300px; }
 #right-panel {
   float: right;
-  width: 340px;
+  width: 300px;
   margin-left: 15px;
 
   -webkit-transition: all 400ms ease-out;
@@ -609,7 +598,7 @@ label.checkbox-label input[type=checkbox]{
 
 .vertical-collapse {
   background: url('../assets/chart/collapse-rightwards.png') no-repeat center;
-  right: 340px;
+  right: 300px;
 }
 
 
@@ -928,21 +917,20 @@ text {
   content: "▼ 看跌";
 }
 
-
 /*= Dashboard
 --------------------------------------------------------------*/
-@media (max-width: 1239px){
-  #snapshot{
-    height: 150px;
-  }
-
+@media (max-width: 1024px){
   .btn-buy-sell-wrapper {
     float: none;
     margin-top: 10px;
   }
 }
-
-
+@media (max-width: 1200px) and (min-width: 1024px) {
+  .btn-buy,
+  .btn-sell {
+    width: 90px;
+  }
+}
 
 /* =Stockpicker
 ---------------------------------------------------------------*/
@@ -955,7 +943,7 @@ text {
 
 .panel-loader {
   height: 500px;
-  width: 340px;
+  width: 300px;
   background-color: #262626;
   background-image: url('../assets/chart/ajax-loader.gif') center no-repeat;
 }
